nickel-lang/tests/integration/fail/records/merge_nested_incompatible_types.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::MergeIncompatibleArgs'
({ a.b = {} } & { a.b.c = [] } & { a.b.c = {}}).a.b.c